syntax = "proto3";

package yandex.cloud.priv.mdb.v1.support;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/mdb/v1/support;mdb_support";

message Service {
    string type = 1;
    string status = 2;
    string role = 3;
}

message Resources {
    string preset = 1;
    string disk_type = 2;
    int64 disk_size = 3;
}

message Host {
    string name = 1;
    string instance_id = 2;
    string role = 3;
    string status = 4;
    repeated Service services = 5;
    bool public_ip = 6;
    Resources resources = 7;
}

message Cluster {

  string id = 1;
  string type = 2;
  string cloud_id = 3;
  string folder_id = 4;
  string name = 5;
  string environment = 6;
  string status = 7;
  string health = 8;
  google.protobuf.Timestamp created_at = 9;
  string net_id = 10;
  repeated string sgs_id = 11;
  string version = 12;
  repeated Host hosts = 13;
}
